Finishing list functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <div>
       <form id="form">
         <ul id="ul"></ul>
-        <input type="text" id="text" placeholder="Add tag" /><br /><br />
+        <input
+          type="text"
+          id="text"
+          placeholder="Add tag"
+          name="tagName"
+        /><br /><br />
         <input type="submit" id="button" value="Click me" />
       </form>
     </div>
